# test_failed_action

./: LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: generate_api.yml
specifications/: model.md
user/: __init__.py
user/core/: __init__.py  image.py  user.py
user/schemes/: user_schema.md
user/schemes/json/: Image.json  User.json
